0.1.0: November 9, 2011
- Initial version

0.1.1: November 24, 2011
- Bugfixes

0.1.2: December 1, 2011
- The DjangoMessagesNotificationBackend can now use the subject as well as the text
- Easier to subclass BaseNotification and set your own default properties
- Changed documentation to reStructuredText, in preparation of move to PyPi

0.1.3: December 5, 2011
- Completely separated notification types and backends
- Rendered subject and text are saved in database queue
- Simpler to create notification, no more .do('add')
- New get_recipients method
- Able to set a different subject and/or text per different backend
- Respect FAIL_SILENT in _get_backends(self)
- Completely removed the Django messages backend (it didn't make sense)
- Updated docs and usage examples

Next: ?
- New settings app