@@ -1,3 +1,41 @@
-{% for name, class in notification_types.items %}
-    <div>{{ name }}: {{ class.allowed_backends }}</div>
-{% endfor %}
+{% extends "base.html" %}
+
+{% block content %}
+    <form method="post" class="form-stacked">
+        {% csrf_token %}
+
+        <table class="zebra-striped">
+            <thead>
+                <tr>
+                    <th>Type</th>
+                    {% for backend_class_name, backend_class in notification_backends.items %}
+                        <th>{{ backend_class.get_name }}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for type_class_name, type_dict in notification_types.items %}
+                    <tr>
+                        <td>
+                            <strong>{{ type_dict.type_class.get_name }}</strong><br/>
+                            {{ type_dict.type_class.get_help }}
+                        </td>
+
+                        {% for backend_class_name, backend_class in notification_backends.items %}
+                            <td>
+                                {% if backend_class_name in type_dict.type_class.allowed_backends %}
+                                    <input type="checkbox" name="{{ type_class_name }}" value="{{ backend_class_name }}"{% if backend_class_name in type_dict.selected_backends %} checked="checked"{% endif %} />
+                                {% endif %}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        <div class="actions">
+            <input type="submit" value="Save" class="btn primary" />
+        </div>
+    </form>
+{% endblock %}
